traces/bug_240.txt
examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:549: error: DEAD_STORE
  The value written to &nrhs (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/complex_SuperLU_DIST_FreeFem.cpp:549:2: Write of unused value
547.   	delete [] B;
548.   	options.Fact = FACTORED; /* Indicate the factored form of A is supplied. */
549.   	nrhs=1;
        ^
550.   	SUPERLU_FREE(berr);  	
551.   
